--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,46 @@
   <groupId>packt</groupId>
   <artifactId>sparkproject</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <spark.version>2.4.4</spark.version>
+  </properties>>
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.12</artifactId>
-      <version>2.4.3</version>
+      <version>${spark.version}</version>
       <!--      Uncomment for execution outside of IntelliJ-->
       <!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.12</artifactId>
-      <version>2.4.3</version>
+      <version>${spark.version}</version>
       <!--      Uncomment for execution outside of IntelliJ-->
       <!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.12</artifactId>
+      <version>${spark.version}</version>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.12</artifactId>
+      <version>${spark.version}</version>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-catalyst_2.12</artifactId>
+      <version>${spark.version}</version>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
       <groupId>com.holdenkarau</groupId>
       <artifactId>spark-testing-base_2.12</artifactId>
+<!--      2.4.4 not yet available-->
       <version>2.4.3_0.12.0</version>
       <scope>test</scope>
     </dependency>
